firewall.rules
# Generated by iptables-save v1.4.12 on Wed Feb 15 16:33:01 2012
# Usage: $ sudo iptables-restore < firewall.rules
# DNS, NTP, HTTP, SSL, SSH, SMTP, SSMTP, IMAP2, WHOIS, IMAPS, IRC, XMPP over SSL, HKP
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#-A OUTPUT -m owner --uid-owner debian-tor -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 143 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 43 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 194 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6667 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5223 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 11371 -j ACCEPT
COMMIT
# Completed on Wed Feb 15 16:33:01 2012
